--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ POSTGRES_USER="momo"
 POSTGRES_PASSWORD="@momo.17"
 POSTGRES_DATABASE="opentts"
 POSTGRES_DB="opentts"
+
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
