--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "hono": "^4.9.6",
+    "minio": "^8.0.6",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "uuid": "^12.0.0"
   }
